kotlin/semlang-parser/src/test/semlang/validatorTests/fail/functionBinding1.sem
function myStuff.myFunction(): () -> Integer {
  let myInt = Integer."1"
  // Trying to bind a variable of non-function type
  myInt|(Integer."3")
}
